Debugging et ajout dépendances manquantes